mealie/overlays/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Mealie
    gethomepage.dev/description: Recipe Manager
    gethomepage.dev/icon: "sh-mealie"

spec:
  rules:
  - host: mealie
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mealie
              port:
                name: http
